# ferrowl

./: .dex.conf  .gitignore  .lefthook.yml  .shrike.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  PRD.md  README.md  clippy.toml  deny.toml  plan.md
docs/: prd.md
ferrowl/: Cargo.toml  build.rs
ferrowl-codec/: Cargo.toml
ferrowl-codec/src/: access.rs  address.rs  codec.rs  error.rs  kind.rs  lib.rs  traits.rs  value.rs
ferrowl-codec/src/format/: alignment.rs  bitfield.rs  endian.rs  mod.rs  scalar.rs  word_order.rs
ferrowl-codec/tests/: codec_roundtrip.rs
ferrowl-derive/: Cargo.toml
ferrowl-derive/examples/: widget.rs
ferrowl-derive/src/: lib.rs
ferrowl-derive/tests/: focus.rs
ferrowl-lua-derive/: Cargo.toml
ferrowl-lua-derive/src/: lib.rs
ferrowl-lua-derive/tests/: module.rs
ferrowl-modbus/: Cargo.toml
ferrowl-modbus/src/: client_core.rs  command.rs  common.rs  config.rs  error.rs  key.rs  lib.rs  log.rs  operation.rs  run_config.rs  scalar.rs  server_core.rs  transport.rs
ferrowl-modbus/src/rtu/: client.rs  mod.rs  server.rs
ferrowl-modbus/src/tcp/: client.rs  mod.rs  server.rs
ferrowl-modbus/tests/: rtu_serial.rs  tcp_loopback.rs
ferrowl-net/: Cargo.toml
ferrowl-net/src/: client_core.rs  common.rs  lib.rs  server_core.rs
ferrowl-net/src/rtu/: client.rs  server.rs
ferrowl-net/src/tcp/: client.rs  server.rs
ferrowl-net/tests/: tcp_loopback.rs
ferrowl-ocpp/: Cargo.toml  README.md
ferrowl-ocpp/src/: conn.rs  correlation.rs  error.rs  lib.rs  log.rs  security.rs
ferrowl-ocpp/src/action/: macros.rs  mod.rs  v1_6.rs  v2_0_1.rs  v2_1.rs
ferrowl-ocpp/src/cs/: action_handler.rs  adapter.rs  command.rs  config.rs  core.rs  handler.rs  mod.rs  ops.rs
ferrowl-ocpp/src/csms/: action_handler.rs  adapter.rs  command.rs  config.rs  core.rs  handler.rs  mod.rs  ops.rs  registry.rs  tls_stream.rs
ferrowl-ocpp/src/ocppj/: codec.rs  error_code.rs  message.rs  mod.rs
ferrowl-ocpp/src/semantic/: mod.rs  types.rs
ferrowl-ocpp/tests/: ws_loopback_security.rs  ws_loopback_v16.rs  ws_loopback_v201.rs  ws_loopback_v21.rs  ws_semantic_v16_v201.rs
ferrowl-reg/: Cargo.toml
ferrowl-reg/src/: codec.rs  enums.rs  format.rs  lib.rs  traits.rs  value.rs
ferrowl-ui/: Cargo.toml
ferrowl-ui-derive/: Cargo.toml
ferrowl-ui-derive/examples/: widget.rs
ferrowl-ui-derive/src/: focus.rs  lib.rs  overlay.rs  table_entry.rs
ferrowl-ui-derive/tests/: focus.rs  overlay.rs  table_entry.rs
ferrowl-ui/examples/: dialog.rs  input_field.rs  selection.rs  suggest_input.rs  table.rs  text.rs
ferrowl-ui/src/: border.rs  event_result.rs  lib.rs  screen.rs  traits.rs  types.rs
ferrowl-ui/src/state/: button.rs  code_input_field.rs  input_field.rs  mod.rs  scrolling_tabs.rs  selection.rs  suggest_input.rs  table.rs  vim.rs
ferrowl-ui/src/style/: button.rs  input_field.rs  mod.rs  scrolling_tabs.rs  selection.rs  suggest_input.rs  syntax.rs  table.rs  text.rs
ferrowl-ui/src/widgets/: build.rs  button.rs  code_input_field.rs  input_field.rs  mod.rs  scrolling_tabs.rs  selection.rs  suggest_input.rs  table.rs  text.rs
ferrowl-ui/tests/: render.rs
ferrowl-util/: Cargo.toml
ferrowl-util/src/: convert.rs  lib.rs  tokio.rs
ferrowl-util/tests/: util_api.rs
ferrowl/src/: app.rs  cli.rs  command.rs  headless.rs  lua.rs  main.rs  migrate.rs  module.rs  registry.rs  script_template.rs  session_e2e_tests.rs  session_sim.rs
ferrowl/src/app/: commands.rs  help.rs  keys.rs  mod.rs  overlay.rs  registers.rs  render.rs  testkit.rs
ferrowl/src/cli/: headless.rs  mod.rs
ferrowl/src/config/: app.rs  device.rs  mod.rs  script.rs  session.rs
ferrowl/src/dialog/: close_confirm.rs  help.rs  lua_help.rs  mod.rs  path_suggest.rs  rename.rs  script_keys.rs  script_manager.rs  scripts.rs  session.rs  setup.rs  template_browser.rs
ferrowl/src/dialog/edit/: add_value.rs  confirm.rs  input.rs  mod.rs  selection.rs  subdialog.rs
ferrowl/src/instance/: builder.rs  config.rs  error.rs  handle.rs  mod.rs
ferrowl/src/lua/: value_conv.rs
ferrowl/src/module/: mod.rs  type_descriptor.rs  type_select.rs  view.rs
ferrowl/src/module/modbus/: build.rs  log.rs  mod.rs  module.rs  registers.rs  setup.rs  setup_dialog.rs  table.rs  view.rs
ferrowl/src/module/modbus/config/: device.rs  mod.rs  session.rs
ferrowl/src/module/modbus/config/device/: value_types.rs
ferrowl/src/module/modbus/dialog/: add_value.rs  confirm.rs  input.rs  mod.rs  register_dialog.rs  selection.rs  subdialog.rs  widgets.rs
ferrowl/src/module/modbus/dialog/input/: build.rs  mod.rs  render.rs
ferrowl/src/module/modbus/dialog/selection/: build.rs  mod.rs  render.rs
ferrowl/src/module/modbus/setup_dialog/: choices.rs
ferrowl/src/module/modbus/view/: mod.rs  mutate.rs  overlay.rs
ferrowl/src/module/ocpp/: action_dialog.rs  lock.rs  mod.rs  scope.rs  setup.rs  setup_dialog.rs  view.rs  widgets.rs  wire_log.rs
ferrowl/src/module/ocpp/client/: backend.rs  config.rs  handler.rs  lua_sim.rs  mod.rs  scripts.rs  v2_0_1.rs  v2_common.rs  view.rs
ferrowl/src/module/ocpp/client/v1_6/: config_dialog.rs  handler.rs  mod.rs  state.rs  version.rs  view.rs
ferrowl/src/module/ocpp/config/: device.rs  mod.rs  session.rs
ferrowl/src/module/ocpp/server/: backend.rs  detail.rs  lua.rs  mod.rs  v2_common.rs  view.rs
ferrowl/src/module/ocpp/setup_dialog/: security.rs
ferrowl/src/module/ocpp/spec/: mod.rs  v1_6.rs  v2_0_1.rs  v2_1.rs
ferrowl/src/session/: e2e_tests.rs  mod.rs  sim.rs
ferrowl/src/view/: command.rs  log.rs  main.rs  mod.rs  tabs.rs  text.rs
ferrowl/templates/modbus/: apply-limit.lua  register-mirror.lua  register-ramp.lua  sine-wave.lua
ferrowl/templates/ocpp-client/: meter-values.lua  transaction-cycle.lua
ferrowl/templates/ocpp-server/: station-report.lua
ferrowl/templates/session/: module-inventory.lua  power-report.lua
ferrowl/tests/: cli.rs  headless.rs
modbus-cli/: Cargo.toml
modbus-cli/src/: main.rs  module.rs
modbus-cli/src/dialog/: mod.rs
modbus-cli/src/dialog/edit/: input.rs  selection.rs
modbus-cli/src/view/: main.rs
(+167 files in other folders)
