[workspace]
resolver = "3"
members = [
    "ferrowl-lua",
    "ferrowl-store",
    "ferrowl-codec",
    "ferrowl-ring",
    "ferrowl-modbus",
    "ferrowl-ocpp",
    "ferrowl-util",
    "ferrowl-ui",
    "ferrowl",
    "ferrowl-ui-derive",
    "ferrowl-lua-derive",
]

[workspace.dependencies]
parking_lot = "0.12"
