[workspace]
resolver = "3"
members = [
    "ferrowl-lua",
    "ferrowl-store",
    "ferrowl-syntax",
    "ferrowl-codec",
    "ferrowl-ring",
    "ferrowl-modbus",
    "ferrowl-ocpp",
    "ferrowl-util",
    "ferrowl-ui",
    "ferrowl",
    "ferrowl-ui-derive",
    "ferrowl-lua-derive",
]

[workspace.dependencies]
parking_lot = "0.12"

# Speed up repeated release builds during development.
[profile.release]
incremental = true

# Fast iteration profile: optimized enough to be usable, much quicker to build.
# Usage: cargo build --profile fastrel
[profile.fastrel]
inherits = "release"
opt-level = 1
debug = false
