[package]
name = "ferrowl-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
derive_builder = { workspace = true }
getset = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio-modbus = { workspace = true }
