[package]
name = "ferrowl-derive"
version = "0.4.1"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

[dev-dependencies]
ferrowl-ui = { path = "../ferrowl-ui" }
crossterm = "0.29.0"
derive_builder = "0.20.2"
