[package]
name = "ferrowl-lua-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
ferrowl-lua = { path = "../ferrowl-lua" }
