[package]
name = "ferrowl-modbus"
version = "0.4.9"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-codec = { path = "../ferrowl-codec" }

anyhow = "1.0.100"
thiserror = "2.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["time"] }
tokio-modbus = { version = "0.17.0", features = [
    "futures-util",
    "rtu-server",
    "tcp-server",
] }
tokio-serial = "5.4.5"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
# Async test harness for the `handle_request` server logic (the crate's own tokio dep is
# `time`-only since the library never spins up a runtime itself). `rt-multi-thread` is required by
# the TCP loopback integration test: the server's `block_in_place` needs a multi-threaded runtime.
# `ferrowl-store`/`ferrowl-codec` let that test build and seed memory directly.
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-codec = { path = "../ferrowl-codec" }
