[package]
name = "ferrowl-modbus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-codec = { path = "../ferrowl-codec" }

anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-modbus = { workspace = true, features = [
    "futures-util",
    "rtu-server",
    "tcp-server",
] }
tokio-serial = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
# Async test harness for the `handle_request` server logic (the crate's own tokio dep is
# `time`-only since the library never spins up a runtime itself). `rt-multi-thread` lets the TCP
# loopback integration test run its client and server tasks as true background work while the
# test body sleeps between assertions (no longer required for any blocking bridge — the server's
# request path is synchronous end-to-end and also passes on a current-thread runtime).
# `ferrowl-store`/`ferrowl-codec` let that test build and seed memory directly.
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-codec = { path = "../ferrowl-codec" }
# Only used to unit-test `rtu::Config`'s serde defaults (`reconnect` missing vs. explicit).
serde_json = { workspace = true }
