[package]
name = "ferrowl-net"
version = "0.4.0"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
ferrowl-mem = { path = "../ferrowl-mem" }
ferrowl-reg = { path = "../ferrowl-reg" }

anyhow = "1.0.100"
thiserror = "2.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["time"] }
tokio-modbus = { version = "0.17.0", features = [
    "futures-util",
    "rtu-server",
    "tcp-server",
] }
tokio-serial = "5.4.5"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
# Async test harness for the `handle_request` server logic (the crate's own tokio dep is
# `time`-only since the library never spins up a runtime itself). `rt-multi-thread` is required by
# the TCP loopback integration test: the server's `block_in_place` needs a multi-threaded runtime.
# `ferrowl-mem`/`ferrowl-reg` let that test build and seed memory directly.
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
ferrowl-mem = { path = "../ferrowl-mem" }
ferrowl-reg = { path = "../ferrowl-reg" }
