[package]
name = "ferrowl-ocpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["v1_6", "v2_0_1", "v2_1"]
v1_6 = ["rust-ocpp/v1_6"]
v2_0_1 = ["rust-ocpp/v2_0_1"]
v2_1 = ["rust-ocpp/v2_1"]

[dependencies]
rust-ocpp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "net", "macros"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
validator = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rcgen = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
] }
serde_json = { workspace = true }
