[package]
name = "ferrowl-reg"
version = "0.4.1"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.100"
derive-getters = "0.5.0"
derive_builder = "0.20.2"
derive_setters = "0.1.8"
getset = "0.1.6"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio-modbus = "0.17.0"
