[package]
name = "ferrowl-ui-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
ferrowl-ui = { path = "../ferrowl-ui" }
crossterm = { workspace = true }
derive_builder = { workspace = true }
ratatui = { workspace = true }
