[package]
name = "ferrowl-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["vscode_dark"]
vscode_dark = []
catppuccin_mocha = []
gruvbox_dark = []

[dependencies]
crossterm = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
ferrowl-syntax = { path = "../ferrowl-syntax" }
itertools = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
ferrowl-ui-derive = { path = "../ferrowl-ui-derive" }
