[package]
name = "ferrowl-util"
version = "0.4.4"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
toml = "0.9.11"

[dev-dependencies]
# The `#[tokio::main]` doctests in `tokio.rs` need the macro + multi-thread runtime, which the
# library itself does not depend on. Declared here so `cargo test -p ferrowl-util` is self-contained
# (previously these passed only via workspace-wide feature unification).
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
