[package]
name = "ferrowl-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
toml = { workspace = true }

[dev-dependencies]
# The `#[tokio::main]` doctests in `tokio.rs` need the macro + multi-thread runtime, which the
# library itself does not depend on. Declared here so `cargo test -p ferrowl-util` is self-contained
# (previously these passed only via workspace-wide feature unification).
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
