[package]
name = "ferrowl"
version = "0.4.2"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[dependencies]
ferrowl-util = { path = "../ferrowl-util" }
ferrowl-reg = { path = "../ferrowl-reg" }
ferrowl-ui = { path = "../ferrowl-ui" }
ferrowl-log = { path = "../ferrowl-log" }
ferrowl-mem = { path = "../ferrowl-mem" }
ferrowl-net = { path = "../ferrowl-net" }
ferrowl-lua = { path = "../ferrowl-lua" }
ferrowl-derive = { path = "../ferrowl-derive" }
anyhow = "1.0.100"
thiserror = "2.0"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = [
    "all-widgets",
    "unstable-widget-ref",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["sync", "time", "rt"] }
derive_builder = "0.20.2"
