[package]
name = "ferrowl"
version = "0.4.12"
edition = "2024"
authors = ["David Loewe <49597367+TumbleOwlee@users.noreply.github.com>"]

[features]
default = ["vscode_dark"]
vscode_dark = ["ferrowl-ui/vscode_dark"]
catppuccin_mocha = ["ferrowl-ui/catppuccin_mocha"]
gruvbox_dark = ["ferrowl-ui/gruvbox_dark"]

[dependencies]
ferrowl-util = { path = "../ferrowl-util" }
ferrowl-codec = { path = "../ferrowl-codec" }
ferrowl-ui = { path = "../ferrowl-ui", default-features = false }
ferrowl-ring = { path = "../ferrowl-ring" }
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-modbus = { path = "../ferrowl-modbus" }
ferrowl-ocpp = { path = "../ferrowl-ocpp" }
ferrowl-lua = { path = "../ferrowl-lua" }
ferrowl-syntax = { path = "../ferrowl-syntax" }
ferrowl-ui-derive = { path = "../ferrowl-ui-derive" }
anyhow = "1.0.100"
thiserror = "2.0"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = [
    "all-widgets",
    "unstable-widget-ref",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["sync", "time", "rt", "signal"] }
derive_builder = "0.20.2"
parking_lot = { workspace = true }
futures-util = "0.3.31"
mlua = { version = "0.11.4", default-features = false }

[dev-dependencies]
