[package]
name = "ferrowl"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["vscode_dark"]
vscode_dark = ["ferrowl-ui/vscode_dark"]
catppuccin_mocha = ["ferrowl-ui/catppuccin_mocha"]
gruvbox_dark = ["ferrowl-ui/gruvbox_dark"]

[dependencies]
ferrowl-util = { path = "../ferrowl-util" }
ferrowl-codec = { path = "../ferrowl-codec" }
ferrowl-ui = { path = "../ferrowl-ui", default-features = false }
ferrowl-ring = { path = "../ferrowl-ring" }
ferrowl-store = { path = "../ferrowl-store" }
ferrowl-modbus = { path = "../ferrowl-modbus" }
ferrowl-ocpp = { path = "../ferrowl-ocpp" }
ferrowl-lua = { path = "../ferrowl-lua" }
ferrowl-syntax = { path = "../ferrowl-syntax" }
ferrowl-ui-derive = { path = "../ferrowl-ui-derive" }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "signal"] }
derive_builder = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
mlua = { workspace = true }

[dev-dependencies]
